--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
 @import url(./blocks/content/content.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__info/header__info.css);
+@import url(./blocks/header/__email/header__email.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__avatar-info/profile__avatar-info.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
@@ -47,3 +50,10 @@
 @import url(./blocks/popup/__container-image/popup__container-image.css);
 @import url(./blocks/popup/__description/popup__description.css);
 @import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/auth/auth.css);
+@import url(./blocks/auth/auth__button/auth__button.css);
+@import url(./blocks/auth/auth__form/auth__form.css);
+@import url(./blocks/auth/auth__heading/auth__heading.css);
+@import url(./blocks/auth/auth__input/auth__input.css);
+@import url(./blocks/auth/auth__text/auth__text.css);
+@import url(./blocks/auth/auth__link/auth__link.css);
