--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,9 @@
 @import url(./blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(./blocks/popup/__close-button/popup__close-button.css);
 @import url(./blocks/popup/__container/popup__container.css);
+@import url(./blocks/popup/__container/_withoutform/popup__container_withoutform.css);
 @import url(./blocks/popup/__heading/popup__heading.css);
+@import url(./blocks/popup/__heading/_withoutform/popup__heading_withoutform.css);
 @import url(./blocks/popup/__item/popup__item.css);
 @import url(./blocks/popup/__item/_type/popup__item_type_error.css);
 @import url(./blocks/popup/__error/popup__error.css);
@@ -47,9 +49,11 @@
 @import url(./blocks/popup/_type/popup_type_add-element.css);
 @import url(./blocks/popup/_type/popup_type_confirm.css);
 @import url(./blocks/popup/_type/popup_type_update-avatar.css);
+@import url(./blocks/popup/_type/popup_type_result-registration.css);
 @import url(./blocks/popup/__container-image/popup__container-image.css);
 @import url(./blocks/popup/__description/popup__description.css);
 @import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/__icon/popup__icon.css);
 @import url(./blocks/auth/auth.css);
 @import url(./blocks/auth/auth__button/auth__button.css);
 @import url(./blocks/auth/auth__form/auth__form.css);
